# rules_oapi_codegen

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  go.work.sum
.github/workflows/: build.yml
docs/: BUILD.bazel  oapi_codegen.md  release.md
example/: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  main.go  main_test.go  petstore.yaml
example/server/: BUILD.bazel  server.go
oapi_codegen/: BUILD.bazel  def.bzl
